--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "prettier": "2.7.1"
   }
 }
