--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
