--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/lexend": "^4.5.13",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.11",
     "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
