--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "orkurik",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://livols.github.io",
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/inter": "^4.5.13",
@@ -18,6 +20,7 @@
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +29,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
+    "save-dev": "^0.0.1-security",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -33,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
